--- a/landing.css
+++ b/landing.css
@@ -758,9 +758,10 @@ button{
 }
 
 #termsfooter{
-	position: relative;
-	top: 180px;
-	height: 70px;
+	text-align: center;
+	position: absolute;
+	top: 4870px;
+	height: 106px;
 	width: 100%;
 	background-color: rgb(255,80,10);
 }
@@ -769,7 +770,7 @@ button{
 	position:relative;
 	top: 20px;
 	height: 30px;
-	margin-left: 6.25%;
+	margin: 0 6% 0 6%;
 }
 
 #termsfooter p{
@@ -778,8 +779,9 @@ button{
 	font-size: 14px;
 	font-weight: lighter;
 	color: white;
-	top: 27px;
-	right: 6.25%;
+	top: 70px;
+	left:18.75%;
+	width: 62.5%;
 	margin: 0px;
 }
 
